# pir-project2017

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ci/: check-basic-style.sh  run-all.sh  test-all.sh  test-all.sh~
data/: config.json
rustle-my-net/: Cargo.toml
rustle-my-net/src/: main.rs  main.rs~
rustle-my-net/src/input/: mod.rs
rustle-my-net/src/nn/: matrix.rs  mod.rs  mod.rs~
rustle-my-net/src/structs/: mod.rs
src/: logging.rs  main.rs  model.rs
src/input/: config.rs  mod.rs  util.rs
src/nn/: learning.rs  mod.rs
src/structs/: flower.rs  mnist.rs  mod.rs  serialnet.rs
