[package]
name = "rustle-my-net"
version = "0.1.0"
authors = [
    "Johann Arndt <joarndt@uos.de>",
    "Victor Brinkhege <vbrinkhege@uos.de>",
    "Lukas Kalde <lkalde@uos.de>",
    "Tom Schneider <toschneider@uos.de>",
]

[dependencies]
clap = "2.20.0"
nalgebra = "0.10.1"
rand = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
fern = "0.3.5"
log = "0.3.6"
time = "0.1.36"
